--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,7 +13,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
@@ -22,3 +22,4 @@ jobs:
         dotnet-version: 6.0.x
     - name: Test
       run: dotnet test
+      working-directory: ApiTests
